# earwig

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
changelog.d/: +contributing-config-setup.docs.md  +contributing-release-tidy.docs.md  +dynamic-version-badge.docs.md  +gitignore-claude-md.chore.md  +install-script.feature.md  +oss-readiness-docs.docs.md  +project-guide-docs.docs.md  +release-script.chore.md  +rename-base-exception.chore.md  +setup-command.feature.md  +unwrap-prose.docs.md  10.feature.md  10.removal.md  12.feature.md  14.feature.md  16.chore.md  17.chore.md  18.bugfix.md  README.md
examples/: example-transcript.md
scripts/: release.sh
src/earwig/: __init__.py  cli.py  config.py  models.py  naming.py  paragraphs.py  render.py  setup.py  transcribe.py  update.py
src/podscribe/: __init__.py  cli.py  fetch.py  models.py  naming.py  render.py  transcribe.py
tests/: conftest.py  test_cli.py  test_config.py  test_fetch.py  test_install.py  test_integration.py  test_models.py  test_naming.py  test_paragraphs.py  test_render.py  test_setup.py  test_transcribe.py  test_update.py  test_version.py
