[project]
name = "podscribe"
version = "0.1.0"
description = "Local CLI: YouTube podcast URL to speaker-labeled Markdown transcript"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.1.1",
    "whisperx>=3.1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
podscribe = "podscribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podscribe"]

[tool.pytest.ini_options]
markers = ["slow: end-to-end tests needing network, ffmpeg, models, and HF_TOKEN"]
addopts = "-m 'not slow'"
