[project]
name = "earwig"
version = "0.1.0"
description = "Local CLI: YouTube podcast URL to speaker-labeled Markdown transcript"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Gunnar Gabrielson" }]
keywords = ["transcription", "podcast", "diarization", "whisper", "youtube", "speaker-labels"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
# whisperX 3.8+ is required: the diarization API and default model differ from earlier
# releases, and earwig targets the 3.8 layout (whisperx.diarize.DiarizationPipeline).
dependencies = [
    "yt-dlp>=2024.1.1",
    "whisperx>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/gunn4r/earwig"
Repository = "https://github.com/gunn4r/earwig"
Issues = "https://github.com/gunn4r/earwig/issues"

[project.scripts]
earwig = "earwig.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earwig"]

[tool.pytest.ini_options]
markers = ["slow: end-to-end tests needing network, ffmpeg, models, and HF_TOKEN"]
addopts = "-m 'not slow'"
